updated apis and rating system
